# LibjpegDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/vst/libjpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/include/: mm.h
app/src/main/java/com/vst/libjpegdemo/: ImageUtils.java  JpegConst.java  MainActivity.java  NativeCallBack.java  NativeCompress.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/vst/libjpegdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
